@@ -30,3 +30,11 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
 # THE POSSIBILITY OF SUCH DAMAGE.
 ###############################################################################
+
+
+class RunCommandsException(Exception):
+    pass
+
+
+class MessagesException(Exception):
+    pass
