@@ -1,6 +1,8 @@
 CHANGELOG
 ----------------------
 [version/0.1.0]
+ * Added Colors class to workflow/core/common.py
+ * Updated changelog
  * Added workflow/parent/destroy.py
  * Added workflow/parent/deploy.py
  * Added workflow/parent/build.py
